# assignments_operating_systems

./: client_request_multiple_threads  luncher  singelton  thread_pool
Ex.1/: CMakeLists.txt  makefile
Ex.1/Polyalphabetic_encoder/: Makefile  decode.c  encode.c  encriptor.c  encriptor.h
Ex.1/PythagoreanTtiangle/: makefile  pythagoreanTriangle  pythagoreanTriangle.c
Ex.1/TarCompressEncrypt/: makefile  myunzip  myunzip.c  myzip  myzip.c  output.gpg
Ex.1/TarCompressEncrypt/unzipped_directory/to_compress/: one  two
Ex.1/debug Example/: main.c  program_with_debugging  program_without_debugging
Ex.1/debugExample/: Makefile  infiniteRecursive.c
Ex.2/: Base64Encode.c  SimpleClient.c  base64.c  complexClient.c  file_to_download.txt  makefile  mysimplehttpServer.c  test_post_request.txt
Ex.2/clientFiles/: test2_file.txt  test_file.txt
Ex.2/partA/: Base64Decode.c  makefile  new_test_post.txt  server.c  server.h  simpleClient.c  test_get.txt  test_post.txt
Ex.2/partB/: asyncClient  asyncClient.c  base64.h  complexClient.c  files2.list  makefile  server  server.c  server.h  test1.txt
Ex.2/partB/clientFiles/: file.txt  test_get_request.txt  test_get_request2.txt  test_post_request.txt
Ex.2/partB/serverFiles/: encoded_file.txt  encoded_file2.txt  files.list  get_files.list  test1.txt_encoded  test2.txt  test2.txt_encoded  (+2 more)
Ex.3/: Makefile  chat_client.c  chat_server.c  makefile  proactor.h  server_proactor.c
Ex.3/section_a/: Makefile  chat_client.c  chat_server.c
Ex.3/section_b/: Makefile  proactor.c  proactor.h
Ex.3/section_c/: Makefile  server_proactor.c
